# EnglishDash

./: .tool-versions  LICENSE  Makefile  README.md
backend/: alembic.ini  database.py  main.py  models.py  pyproject.toml  test.db
backend/migrations/: env.py
backend/migrations/versions/: ecceef886256_add_feedback_column_to_answers_table.py
frontend/: orval.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/questions/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/lib/: axios.ts
frontend/src/lib/default/: default.msw.ts  default.ts
frontend/src/lib/hooks/: useMutex.tsx  usePractice.tsx
frontend/src/scheme/: openapi.json
frontend/src/scheme/models/: answerResponse.ts  answerSubmit.ts  hTTPValidationError.ts  index.ts  practiceResult.ts  practiceSettings.ts  practiceSettingsResponse.ts  questionResponse.ts  validationError.ts  validationErrorLocItem.ts
