[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["lilpacy <revivedtomorrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
openai = "^1.51.0"
greenlet = "^3.1.1"
ruff = "^0.6.9"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
